@@ -1,8 +1,11 @@
    Oct 2006: 0.2.18 Miek <miek@miek.nl>
    -- don't know yet --
    * removed: hist.sh and yesterday.sh
-     never used them myself, probably stopped working in 0.2.17
-   * bug fixed in crypt.pl
+   * bug fix in crypt.pl
+   * $prefix/share/rdup is used for common perl/shell files
+   * all scripts source the share directory, making them smaller
+   * all scripts are prefixed with rdup-
+   * all installed scripts loose the .sh/.pl suffix (Debian Policy)
 
 
 24 Sept 2006: 0.2.17 Miek <miek@miek.nl>
